--- a/client/components/weighin-form.html
+++ b/client/components/weighin-form.html
@@ -3,7 +3,7 @@
     <form>
         <div class="form-group">
             <label>Date:</label>
-            <input type="text" name="date" class="form-control" placeholder="Date">
+            <input type="text" name="date" class="form-control datetimepicker" placeholder="Date">
         </div>
         <div class="form-group">
             <label>Time of Day:</label>
