--- a/client/components/weighin-form.html
+++ b/client/components/weighin-form.html
@@ -1,6 +1,6 @@
 <template name="weighinForm">
     <h2>Weigh-In</h2>
-    <form>
+    <form id="weigh-in-form">
         <div class="form-group">
             <label>Date:</label>
             <input type="text" name="date" class="form-control datetimepicker" placeholder="Date">
