--- a/client/components/weighin.html
+++ b/client/components/weighin.html
@@ -2,6 +2,6 @@
 
 <div class="weigh-in well well-lg" data-id="{{ _id }}">
     <h3>{{ date }}</h3>
-    <h4>{{ weight }}</h4>
+    <h4>{{ weight }} lbs</h4>
 </div>
 </template>
