Habit form functional

--- a/client/components/habits/habits.html
+++ b/client/components/habits/habits.html
@@ -2,4 +2,14 @@
   <div>
       <h1>Habits</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        {{ >habitForm }}
+      </div>
+    </div>
+  </div>
+  <!-- <div class="habit well well-lg" data-id="{{ _id }}">
+    <h3>{{ name }}</h3>
+  </div> -->
 </template>
