--- a/client/components/habits/habitInstance.html
+++ b/client/components/habits/habitInstance.html
@@ -1,6 +1,6 @@
 <template name="habit">
   <div class="habit well well-lg" data-id="{{ _id }}">
       <h3>{{ title }}</h3>
-      <button type="button">Complete</button>
+      <button class="incomplete" type="button">Incomplete</button>
   </div>
 </template>
