--- a/client/components/habits/habitInstance.html
+++ b/client/components/habits/habitInstance.html
@@ -1,4 +1,4 @@
-<template name="habit">
+<template name="habitInstance">
   <div class="habit well well-lg" data-id="{{ _id }}">
       <h3>{{ title }}</h3>
       <input class="incomplete" type="button" id="complete-button" value="Incomplete">
