--- a/client/components/habits/habits.html
+++ b/client/components/habits/habits.html
@@ -10,8 +10,8 @@
     </div>
   </div>
   <div class="habits">
-    {{ #each habits }}
-        {{ >habit }}
+    {{ #each habitInstances }}
+        {{ >habitInstance }}
     {{ /each }}
   </div>
 </template>
